tests/ui/borrowck/issue-88434-minimal-example.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/issue-88434-minimal-example.rs:10:5
   |
LL |     panic!()
   |     ^^^^^^^^ the evaluated program panicked at 'explicit panic', $DIR/issue-88434-minimal-example.rs:10:5
   |
note: inside `f::<{closure@$DIR/issue-88434-minimal-example.rs:3:25: 3:28}>`
  --> $DIR/issue-88434-minimal-example.rs:10:5
   |
LL |     panic!()
   |     ^^^^^^^^
note: inside `_CONST`
  --> $DIR/issue-88434-minimal-example.rs:3:22
   |
LL | const _CONST: &() = &f(&|_| {});
   |                      ^^^^^^^^^^
   = note: this error originates in the macro `$crate::panic::panic_2015` which comes from the expansion of the macro `panic` (in Nightly builds, run with -Z macro-backtrace for more info)

note: erroneous constant encountered
  --> $DIR/issue-88434-minimal-example.rs:3:21
   |
LL | const _CONST: &() = &f(&|_| {});
   |                     ^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
